--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
 cursor {
-    no_hardware_cursors = true
+	no_hardware_cursors = true
 }
 
 
@@ -7,7 +7,7 @@ cursor {
 ### MONITORS ###
 ################
 
-monitor=eDP-1, 1920x1080, auto-left, 1.15
+monitor=eDP-1, 1920x1080, auto, 1.15
 monitor=HDMI-A-1, 1920x1080, auto-left, 1.1
 
 debug {
@@ -28,11 +28,17 @@ $browser = librewolf
 ### AUTOSTART ###
 #################
 
+exec-once = /home/jdgt/.local/bin/launch_portals
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = handle_monitor_connect
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+# Fixes share picker theme
+exec-once = dbus-update-activation-environment --systemd --all
+exec-once = systemctl --user import-environment QT_QPA_PLATFORMTHEME
 
 exec-once = hyprpaper
+exec-once = hypridle
 exec-once = hyprctl setcursor Bibata-Modern-Ice 24
 exec-once = waybar
 exec-once = dunst
@@ -42,15 +48,20 @@ exec-once = dex -a
 exec-once = [workspace 2 silent] $browser
 
 
+#################
+### VARIABLES ###
+#################
+
+env = TERMINAL,$terminal
+env = BROWSER,$browser
+
+
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
-# My own stuff
-env = BROWSER,librewolf
-
 # Run apps in Wayland instead of XWayland
-# env = ELECTRON_OZONE_PLATFORM_HINT,auto
+env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 # Toolkit backend
 env = GDK_BACKEND,wayland,x11,*
@@ -73,9 +84,9 @@ env = LIBVA_DRIVER_NAME,nvidia
 env = GTK_THEME,Kanagawa-Borderless
 env = GTK2_RC_FILES,/usr/share/themes/Kanagawa-Borderless/gtk-2.0/gtkrc
 env = QT_QPA_PLATFORMTHEME,gtk2
+env = XCURSOR_THEME,Bibata-Modern-Ice
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-
 
 # VAAPI driver
 # env = NVD_BACKEND,direct
@@ -89,60 +100,60 @@ env = HYPRCURSOR_SIZE,24
 #####################
 
 xwayland {
-  force_zero_scaling = true
+	force_zero_scaling = true
 }
 
 general { 
-    gaps_in = 6
-    gaps_out = 12
-    border_size = 4
+	gaps_in = 6
+	gaps_out = 12
+	border_size = 4
 
-    col.active_border = rgb(6a9589) rgb(7aa89f) 45deg
-    col.inactive_border = rgba(727169aa)
+	col.active_border = rgb(6a9589) rgb(7aa89f) 45deg
+	col.inactive_border = rgba(727169aa)
 	no_focus_fallback = true
 
 	allow_tearing = true
 
-    layout = dwindle
+	layout = dwindle
 }
 
 decoration {
-    rounding = 8
+	rounding = 8
 
-    drop_shadow = true
-    shadow_range = 6
-    shadow_render_power = 3
-    col.shadow = rgba(16161d80)
+	drop_shadow = true
+	shadow_range = 6
+	shadow_render_power = 3
+	col.shadow = rgba(16161d80)
 
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-        vibrancy = 0.1696
-    }
+	blur {
+		enabled = true
+		size = 3
+		passes = 1
+		vibrancy = 0.1696
+	}
 }
 
 animations {
-    enabled = true
+	enabled = true
 
 	animation = windows, 1, 3, default
-    animation = windowsOut, 1, 4, default, popin 80%
-    animation = border, 1, 6, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 4, default
+	animation = windowsOut, 1, 4, default, popin 80%
+	animation = border, 1, 6, default
+	animation = borderangle, 1, 8, default
+	animation = fade, 1, 7, default
+	animation = workspaces, 1, 4, default
 }
 
 dwindle {
-    pseudotile = true
-    preserve_split = true
+	pseudotile = true
+	preserve_split = true
 
 	force_split = 2
 	default_split_ratio = 1.04
 }
 
 misc { 
-    disable_hyprland_logo = true
+	disable_hyprland_logo = true
 	middle_click_paste = false
 	mouse_move_focuses_monitor = false
 }
@@ -153,22 +164,21 @@ misc {
 #############
 
 input {
-    kb_layout = us,latam
-	kb_options = grp:alt_shift_toggle
+	kb_layout = us,latam
 
 	numlock_by_default = true
 
-    follow_mouse = 2
+	follow_mouse = 2
 	float_switch_override_focus = 0
 
-    touchpad {
-        natural_scroll = true
-    }
+	touchpad {
+		natural_scroll = true
+	}
 }
 
 gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
+	workspace_swipe = true
+	workspace_swipe_fingers = 3
 	workspace_swipe_forever = true
 	workspace_swipe_min_speed_to_force = 5
 }
@@ -179,33 +189,40 @@ gestures {
 ####################
 
 # Hyprland control
-bind = SUPERALT, Q, exit,
-bind = SUPERALT, R, exec, hyprctl reload
+bind = SUPER ALT, Q, exit,
+bind = SUPER ALT, R, exec, hyprctl reload
 
 # Programs
 bind = SUPER, Return, exec, $terminal
-bind = SUPERSHIFT, Return, exec, [float; size 50% 50%] $terminal
+bind = SUPER SHIFT, Return, exec, [float; size 50% 50%] $terminal
 bind = SUPER, E, exec, $fileManager
 bind = SUPER, B, exec, $browser
+
+# Good
+bind = SUPER CTRL ALT SHIFT, L, exec, $browser "https://linkedin.com"
 
 # Menus
 bind = SUPER, Space, exec, pkill rofi || rofi -show drun
 bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 bind = SUPER, Period, exec, rofimoji --skin-tone neutral
-bind = SUPER, X, exec, rofi -show menu -modi "menu:rofi-power-menu --choices=shutdown/reboot/suspend/logout/lockscreen"
+bind = SUPER, X, exec, rofi -show menu -modi "menu:rofi-power-menu"
 
 # Screen capture
 bind = , Print, exec, slurp | grim -g - - | wl-copy
 bind = SHIFT, Print, exec, slurp | grim -g - "$HOME/Pictures/Screenshots/$(date "+%Y-%m-%d %H-%M-%S").png"
+
+# Keyboard layout switching
+bindrl = SHIFT ALT, Alt_L, exec, switch_keyboard_layout
+bindrl = SHIFT ALT, Shift_L, exec, switch_keyboard_layout
 
 # Window controls
 bind = SUPER, Q, killactive,
 bind = SUPER, F, fullscreen,
 bind = SUPER, M, fullscreen, 1 # Monocle-ish
 bind = SUPER, T, settiled,
-bind = SUPERSHIFT, T, pseudo,
+bind = SUPER SHIFT, T, pseudo,
 bind = SUPER, S, setfloating,
-bind = SUPERSHIFT, J, togglesplit
+bind = SUPER SHIFT, J, togglesplit
 
 # Move window focus
 bind = SUPER, H, movefocus, l
@@ -227,15 +244,15 @@ bind = SUPER, Grave, alterzorder, top
 bind = SUPER, C, cyclenext
 bind = SUPER, C, alterzorder, top
 
-bind = SUPERSHIFT, C, cyclenext, prev
-bind = SUPERSHIFT, C, alterzorder, top
+bind = SUPER SHIFT, C, cyclenext, prev
+bind = SUPER SHIFT, C, alterzorder, top
 
 $step = 50
 
-binde = SUPERALT, L, resizeactive, $step 0
-binde = SUPERALT, H, resizeactive, -$step 0
-binde = SUPERALT, K, resizeactive, 0 -$step
-binde = SUPERALT, J, resizeactive, 0 $step
+binde = SUPER ALT, L, resizeactive, $step 0
+binde = SUPER ALT, H, resizeactive, -$step 0
+binde = SUPER ALT, K, resizeactive, 0 -$step
+binde = SUPER ALT, J, resizeactive, 0 $step
 
 # Fast edit mode
 bind = SUPER, W, submap, Move
@@ -255,16 +272,16 @@ bindi = , catchall, exec,
 submap = reset
 
 # Preselect
-bind = SUPERCTRL, H, layoutmsg, preselect l
-bind = SUPERCTRL, L, layoutmsg, preselect r
-bind = SUPERCTRL, K, layoutmsg, preselect u
-bind = SUPERCTRL, J, layoutmsg, preselect d
+bind = SUPER CTRL, H, layoutmsg, preselect l
+bind = SUPER CTRL, L, layoutmsg, preselect r
+bind = SUPER CTRL, K, layoutmsg, preselect u
+bind = SUPER CTRL, J, layoutmsg, preselect d
 
 # Swap windows
-bind = SUPERSHIFT, H, swapwindow, l
-bind = SUPERSHIFT, L, swapwindow, r
-bind = SUPERSHIFT, K, swapwindow, u
-bind = SUPERSHIFT, J, swapwindow, d
+bind = SUPER SHIFT, H, swapwindow, l
+bind = SUPER SHIFT, L, swapwindow, r
+bind = SUPER SHIFT, K, swapwindow, u
+bind = SUPER SHIFT, J, swapwindow, d
 
 # Switch workspaces
 bind = SUPER, 1, workspace, 1
@@ -293,20 +310,20 @@ bind = SUPER, P, pin
 bind = SUPER, TAB, workspace, previous
 
 # Move window to workspace
-bind = SUPERSHIFT, 1, movetoworkspacesilent, 1
-bind = SUPERSHIFT, 2, movetoworkspacesilent, 2
-bind = SUPERSHIFT, 3, movetoworkspacesilent, 3
-bind = SUPERSHIFT, 4, movetoworkspacesilent, 4
-bind = SUPERSHIFT, 5, movetoworkspacesilent, 5
-bind = SUPERSHIFT, 6, movetoworkspacesilent, 6
-bind = SUPERSHIFT, 7, movetoworkspacesilent, 7
-bind = SUPERSHIFT, 8, movetoworkspacesilent, 8
-bind = SUPERSHIFT, 9, movetoworkspacesilent, 9
-bind = SUPERSHIFT, 0, movetoworkspacesilent, 10
+bind = SUPER SHIFT, 1, movetoworkspacesilent, 1
+bind = SUPER SHIFT, 2, movetoworkspacesilent, 2
+bind = SUPER SHIFT, 3, movetoworkspacesilent, 3
+bind = SUPER SHIFT, 4, movetoworkspacesilent, 4
+bind = SUPER SHIFT, 5, movetoworkspacesilent, 5
+bind = SUPER SHIFT, 6, movetoworkspacesilent, 6
+bind = SUPER SHIFT, 7, movetoworkspacesilent, 7
+bind = SUPER SHIFT, 8, movetoworkspacesilent, 8
+bind = SUPER SHIFT, 9, movetoworkspacesilent, 9
+bind = SUPER SHIFT, 0, movetoworkspacesilent, 10
 
 # Example special workspace (scratchpad)
 bind = SUPER, A, togglespecialworkspace
-bind = SUPERSHIFT, A, movetoworkspacesilent, special
+bind = SUPER SHIFT, A, movetoworkspacesilent, special
 
 # Scroll through existing workspaces with SUPER + scroll
 bind = SUPER, mouse_down, workspace, r+1
