hyprland: revert kb_options

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -165,6 +165,7 @@ misc {
 
 input {
 	kb_layout = us,latam
+	kb_options = grp:alt_shift_toggle
 
 	numlock_by_default = true
 
@@ -210,10 +211,6 @@ bind = SUPER, X, exec, rofi -show menu -modi "menu:rofi-power-menu"
 # Screen capture
 bind = , Print, exec, slurp | grim -g - - | wl-copy
 bind = SHIFT, Print, exec, slurp | grim -g - "$HOME/Pictures/Screenshots/$(date "+%Y-%m-%d %H-%M-%S").png"
-
-# Keyboard layout switching
-bindrl = SHIFT ALT, Alt_L, exec, switch_keyboard_layout
-bindrl = SHIFT ALT, Shift_L, exec, switch_keyboard_layout
 
 # Window controls
 bind = SUPER, Q, killactive,
