--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,376 +1,9 @@
-cursor {
-	no_hardware_cursors = true
-}
-
-
-################
-### MONITORS ###
-################
-
-monitor=eDP-1, 1920x1080, auto, 1.15
-monitor=HDMI-A-1, 1920x1080, auto-left, 1.1
-
-debug {
-	disable_scale_checks = true
-}
-
-
-###################
-### MY PROGRAMS ###
-###################
-
-$terminal = kitty
-$fileManager = pcmanfm-qt
-$browser = librewolf
-
-
-#################
-### AUTOSTART ###
-#################
-
-exec-once = /home/jdgt/.local/bin/launch_portals
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = handle_monitor_connect
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
-
-# Fixes share picker theme
-exec-once = dbus-update-activation-environment --systemd --all
-exec-once = systemctl --user import-environment QT_QPA_PLATFORMTHEME
-
-exec-once = hyprpaper
-exec-once = hypridle
-exec-once = import_gsettings
-exec-once = waybar
-exec-once = dunst
-exec-once = wl-paste --watch cliphist store
-
-exec-once = dex -a
-exec-once = [workspace 2 silent] $browser
-
-
-#################
-### VARIABLES ###
-#################
-
-env = TERMINAL,$terminal
-env = BROWSER,$browser
-
-
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
-
-# Run apps in Wayland instead of XWayland
-env = ELECTRON_OZONE_PLATFORM_HINT,auto
-
-# Toolkit backend
-env = GDK_BACKEND,wayland,x11,*
-env = QT_QPA_PLATFORM,wayland;xcb
-env = SDL_VIDEODRIVER,wayland 
-env = CLUTTER_BACKEND,wayland
-
-# XDG specifications
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-
-# Nvidia
-# env = GBM_BACKEND,nvidia-drm # Causes LibreWolf crash
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = LIBVA_DRIVER_NAME,nvidia
-
-# Theming
-env = GTK_THEME,Kanagawa-Borderless
-env = GTK2_RC_FILES,/usr/share/themes/Kanagawa-Borderless/gtk-2.0/gtkrc
-env = QT_QPA_PLATFORMTHEME,gtk2
-env = XCURSOR_THEME,Bibata-Modern-Ice
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,Bibata-Modern-Ice
-env = HYPRCURSOR_SIZE,24
-
-# VAAPI driver
-# env = NVD_BACKEND,direct
-# env = MOZ_DISABLE_RDD_SANDBOX,1
-# env = LIBVA_DRIVER_NAME,nvidia
-# env = __EGL_VENDOR_LIBRARY_FILENAMES,/usr/share/glvnd/egl_vendor.d/10_nvidia.json
-
-
-#####################
-### LOOK AND FEEL ###
-#####################
-
-xwayland {
-	force_zero_scaling = true
-}
-
-general { 
-	gaps_in = 6
-	gaps_out = 12
-	border_size = 4
-
-	col.active_border = rgb(6a9589) rgb(7aa89f) 45deg
-	col.inactive_border = rgba(727169aa)
-	no_focus_fallback = true
-
-	allow_tearing = true
-
-	layout = dwindle
-}
-
-decoration {
-	rounding = 8
-
-	drop_shadow = true
-	shadow_range = 6
-	shadow_render_power = 3
-	col.shadow = rgba(16161d80)
-
-	blur {
-		enabled = true
-		size = 3
-		passes = 1
-		vibrancy = 0.1696
-	}
-}
-
-animations {
-	enabled = true
-
-	animation = windows, 1, 3, default
-	animation = windowsOut, 1, 4, default, popin 80%
-	animation = border, 1, 6, default
-	animation = borderangle, 1, 8, default
-	animation = fade, 1, 7, default
-	animation = workspaces, 1, 4, default
-}
-
-dwindle {
-	pseudotile = true
-	preserve_split = true
-
-	force_split = 2
-	default_split_ratio = 1.04
-}
-
-misc { 
-	disable_hyprland_logo = true
-	middle_click_paste = false
-	mouse_move_focuses_monitor = false
-}
-
-
-#############
-### INPUT ###
-#############
-
-input {
-	kb_layout = us,latam
-	kb_options = grp:alt_shift_toggle
-
-	numlock_by_default = true
-
-	follow_mouse = 2
-	float_switch_override_focus = 0
-
-	touchpad {
-		natural_scroll = true
-	}
-}
-
-gestures {
-	workspace_swipe = true
-	workspace_swipe_fingers = 3
-	workspace_swipe_forever = true
-	workspace_swipe_min_speed_to_force = 5
-}
-
-
-####################
-### KEYBINDINGSS ###
-####################
-
-# Hyprland control
-bind = SUPER ALT, Q, exit,
-bind = SUPER ALT, R, exec, hyprctl reload
-
-# Programs
-bind = SUPER, Return, exec, $terminal
-bind = SUPER SHIFT, Return, exec, [float; size 50% 50%] $terminal
-bind = SUPER, E, exec, $fileManager
-bind = SUPER, B, exec, $browser
-
-# Good
-bind = SUPER CTRL ALT SHIFT, L, exec, $browser "https://linkedin.com"
-
-# Menus
-bind = SUPER, Space, exec, pkill rofi || rofi -show drun
-bind = SUPER, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
-bind = SUPER, Period, exec, rofimoji --skin-tone neutral
-bind = SUPER, X, exec, rofi -show menu -modi "menu:rofi-power-menu"
-
-# Screen capture
-bind = , Print, exec, slurp | grim -g - - | wl-copy
-bind = SHIFT, Print, exec, slurp | grim -g - "$HOME/Pictures/Screenshots/$(date "+%Y-%m-%d %H-%M-%S").png"
-
-# Window controls
-bind = SUPER, Q, killactive,
-bind = SUPER, F, fullscreen,
-bind = SUPER, M, fullscreen, 1 # Monocle-ish
-bind = SUPER, T, settiled,
-bind = SUPER SHIFT, T, pseudo,
-bind = SUPER, S, setfloating,
-bind = SUPER SHIFT, J, togglesplit
-
-# Move window focus
-bind = SUPER, H, movefocus, l
-bind = SUPER, H, alterzorder, top
-
-bind = SUPER, L, movefocus, r
-bind = SUPER, L, alterzorder, top
-
-bind = SUPER, K, movefocus, u
-bind = SUPER, K, alterzorder, top
-
-bind = SUPER, J, movefocus, d
-bind = SUPER, J, alterzorder, top
-
-# Cycle window focus
-bind = SUPER, Grave, focuscurrentorlast
-bind = SUPER, Grave, alterzorder, top
-
-bind = SUPER, C, cyclenext
-bind = SUPER, C, alterzorder, top
-
-bind = SUPER SHIFT, C, cyclenext, prev
-bind = SUPER SHIFT, C, alterzorder, top
-
-$step = 50
-
-binde = SUPER ALT, L, resizeactive, $step 0
-binde = SUPER ALT, H, resizeactive, -$step 0
-binde = SUPER ALT, K, resizeactive, 0 -$step
-binde = SUPER ALT, J, resizeactive, 0 $step
-
-# Fast edit mode
-bind = SUPER, W, submap, Move
-submap = Move
-
-binde = , L, moveactive, $step 0
-binde = , H, moveactive, -$step 0
-binde = , K, moveactive, 0 -$step
-binde = , J, moveactive, 0 $step
-
-bind = SUPER, W, submap, reset
-bind = , Q, submap, reset
-bind = , Escape, submap, reset
-
-bindi = , catchall, exec,
-
-submap = reset
-
-# Preselect
-bind = SUPER CTRL, H, layoutmsg, preselect l
-bind = SUPER CTRL, L, layoutmsg, preselect r
-bind = SUPER CTRL, K, layoutmsg, preselect u
-bind = SUPER CTRL, J, layoutmsg, preselect d
-
-# Swap windows
-bind = SUPER SHIFT, H, swapwindow, l
-bind = SUPER SHIFT, L, swapwindow, r
-bind = SUPER SHIFT, K, swapwindow, u
-bind = SUPER SHIFT, J, swapwindow, d
-
-# Switch workspaces
-bind = SUPER, 1, workspace, 1
-bind = SUPER, 2, workspace, 2
-bind = SUPER, 3, workspace, 3
-bind = SUPER, 4, workspace, 4
-bind = SUPER, 5, workspace, 5
-bind = SUPER, 6, workspace, 6
-bind = SUPER, 7, workspace, 7
-bind = SUPER, 8, workspace, 8
-bind = SUPER, 9, workspace, 9
-bind = SUPER, 0, workspace, 10
-
-# Cycle workspaces
-bind = SUPER, BracketLeft, workspace, r-1
-bind = SUPER, BracketRight, workspace, r+1
-
-binds {
-	allow_workspace_cycles = true
-}
-
-# Pin workspace
-bind = SUPER, P, pin
-
-# Switch to previous workspace
-bind = SUPER, TAB, workspace, previous
-
-# Move window to workspace
-bind = SUPER SHIFT, 1, movetoworkspacesilent, 1
-bind = SUPER SHIFT, 2, movetoworkspacesilent, 2
-bind = SUPER SHIFT, 3, movetoworkspacesilent, 3
-bind = SUPER SHIFT, 4, movetoworkspacesilent, 4
-bind = SUPER SHIFT, 5, movetoworkspacesilent, 5
-bind = SUPER SHIFT, 6, movetoworkspacesilent, 6
-bind = SUPER SHIFT, 7, movetoworkspacesilent, 7
-bind = SUPER SHIFT, 8, movetoworkspacesilent, 8
-bind = SUPER SHIFT, 9, movetoworkspacesilent, 9
-bind = SUPER SHIFT, 0, movetoworkspacesilent, 10
-
-# Example special workspace (scratchpad)
-bind = SUPER, A, togglespecialworkspace
-bind = SUPER SHIFT, A, movetoworkspacesilent, special
-
-# Scroll through existing workspaces with SUPER + scroll
-bind = SUPER, mouse_down, workspace, r+1
-bind = SUPER, mouse_up, workspace, r-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = SUPER, mouse:272, movewindow
-bindm = SUPER, mouse:273, resizewindow
-
-# Media control
-bindel = , XF86AudioRaiseVolume, exec, pactl -- set-sink-volume @DEFAULT_SINK@ +5%
-bindel = , XF86AudioLowerVolume, exec, pactl -- set-sink-volume @DEFAULT_SINK@ -5%
-bindl = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
-
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-bindl = , XF86AudioNext, exec, playerctl next
-
-bind = , XF86MonBrightnessUp, exec, brightnessctl set 5%+
-bind = , XF86MonBrightnessDown, exec, brightnessctl set 5%-
-
-
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
-
-# Floating programs
-windowrule = float, ^(pcmanfm-qt)$
-windowrule = float, ^(org.pulseaudio.pavucontrol)$
-windowrule = float, ^(blueman-manager)$
-windowrule = float, ^(nm-connection-editor)$
-windowrule = float, ^(nvidia-settings)$
-
-# Workspace-specific programs
-windowrule = workspace 3, ^(obsidian)$
-windowrule = workspace 6, ^(discord)$
-windowrule = workspace 10, ^(Spotify)$
-
-windowrulev2 = bordercolor rgb(e6c384), pinned:1 # Different border color for pinned windows
-windowrulev2 = noborder, fullscreen:1 # Borderless monocle
-
-windowrulev2 = suppressevent maximize, class:.*
-
-workspace = 1, monitor:eDP-1, persistent:true, default:true
-workspace = 2, monitor:eDP-1, persistent:true
-workspace = 3, monitor:eDP-1, persistent:true
-workspace = 4, monitor:eDP-1, persistent:true
-workspace = 5, monitor:eDP-1, persistent:true
-workspace = 6, monitor:HDMI-A-1, persistent:true, default:true
-workspace = 7, monitor:HDMI-A-1, persistent:true
-workspace = 8, monitor:HDMI-A-1, persistent:true
-workspace = 9, monitor:HDMI-A-1, persistent:true
-workspace = 10, monitor:HDMI-A-1, persistent:true
+source = ~/.config/hypr/hyprland/variables.conf
+source = ~/.config/hypr/hyprland/monitors.conf
+source = ~/.config/hypr/hyprland/autostart.conf
+source = ~/.config/hypr/hyprland/env.conf
+source = ~/.config/hypr/hyprland/look.conf
+source = ~/.config/hypr/hyprland/input.conf
+source = ~/.config/hypr/hyprland/binds.conf
+source = ~/.config/hypr/hyprland/rules.conf
+source = ~/.config/hypr/hyprland/workspaces.conf
