hyprland: include misc.conf and remove monitors.conf symlink from repo

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -7,3 +7,4 @@ source = ~/.config/hypr/hyprland/input.conf
 source = ~/.config/hypr/hyprland/binds.conf
 source = ~/.config/hypr/hyprland/rules.conf
 source = ~/.config/hypr/hyprland/workspaces.conf
+source = ~/.config/hypr/hyprland/misc.conf
